<resources>
    <string name="app_name">LPG distribution system</string>
    <string name="user">User</string>
    <string name="pass">Password</string>
    <string name="login">LOGIN</string>
    <string name="Forgot">Forgot your password ?</string>
    <string name="regis">Register ?</string>
    <string name="buyonline">Product Category</string>
    <string name="status">Product Status</string>
    <string name="purches">Order History</string>
    <string name="News">News</string>
    <string name="data">Data company</string>
    <string name="help">Report a problem</string>
    <string name="search">Search</string>
    <string name="setting">setting</string>
    <string name="logout">Logout</string>
    <string name="open_drawer">Open</string>
    <string name="close_drawer">Close</string>
    <string name="hot">hot</string>
    <string name="discount">discount</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_pass">PassActivity</string>
    <string name="order">order</string>
</resources>
