<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:background="@drawable/test1">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleX="0.7"
                android:scaleY="0.7"
                android:checked="true"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleX="0.7"
                android:scaleY="0.7" />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleX="0.7"
                android:scaleY="0.7" />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleX="0.7"
                android:scaleY="0.7" />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleX="0.7"
                android:scaleY="0.7" />
        </LinearLayout>

    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:layout_width="100dp"
        android:layout_height="300dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#880e4f"
            android:gravity="center"
            android:text="@string/buyonline"
            android:textColor="#cfd8dc" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#311b92"
            android:gravity="center"
            android:text="@string/status"
            android:textColor="#cfd8dc" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#0d47a1"
            android:gravity="center"
            android:text="@string/purches"
            android:textColor="#cfd8dc" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#006064"
            android:gravity="center"
            android:text="@string/News"
            android:textColor="#cfd8dc" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#1b5e20"
            android:gravity="center"
            android:text="@string/data"
            android:textColor="#cfd8dc" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#827717"
            android:gravity="center"
            android:text="@string/help"
            android:textColor="#cfd8dc" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>



